--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
+    "split-type": "^0.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
