--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.1.0",
     "gsap": "^3.11.3",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
